refactor: 使用新模式重构 web handler
